# AnitoWave

./: .gitignore  CMakeLists.txt  conandata.yml  main.cpp
engine/: anito_wave.cpp  anito_wave.h
engine/camera/: camera.cpp  camera.h
engine/descriptors/: vk_descriptors.cpp  vk_descriptors.h
engine/images/: vk_images.cpp  vk_images.h
engine/initializers/: vk_initializers.cpp  vk_initializers.h
engine/loader/: vk_loader.cpp  vk_loader.h
engine/pipelines/: vk_pipelines.cpp  vk_pipelines.h
engine/types/: vk_types.h
include/: vk_disp_loader.cpp  vk_include.h
shaders/: gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  sky.comp
